--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,15 @@
+/* COLORS */
 /* BASE */
+body {
+  background-color: #b8b8b8; }
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0px; }
 
 p {
   margin: 0px; }
 
-/* LAYOUTS */
+/* LAYOUT */
 .calculator-body {
   width: 500px;
   height: 550px; }
@@ -14,7 +18,8 @@ p {
   width: 80px;
   height: 50px;
   font-size: 18px;
-  color: white; }
+  color: white;
+  text-align: center; }
 
 main > div {
   overflow-x: scroll; }
@@ -24,10 +29,17 @@ main > div {
   src: url("../../fonts/calculatorFont/digital-7.ttf"); }
 .calculator-display {
   font-family: calculatorFont;
-  font-size: 30px;
-  background-color: #BAC6C0; }
+  font-size: 50px;
+  line-height: 1;
+  text-align: right;
+  background-color: #BAC6C0;
+  border: 2px solid gray;
+  border-radius: 5px; }
+  .calculator-display div:first-child {
+    color: #3f4040;
+    min-height: 50px; }
 
-.calculator-display span {
+.calculator-display span:not(:first-child) {
   border-left: 1px solid gray;
   height: 25px; }
 
@@ -46,22 +58,25 @@ main > div {
 
 /* BORDERS & SHADOWS */
 .calculator-borders {
-  border: solid 3px #dddddd;
+  border: solid 3px #a7a7a7;
   border-radius: 5px;
-  box-shadow: 5px 5px 20px #7D807F,5px 5px 20px black; }
+  box-shadow: 5px 5px 20px #3f4040, 5px 5px 20px black; }
 
 /* BUTTONS */
 .keybord-number .btn {
-  background-color: #dddddd; }
+  background-color: #a7a7a7; }
 
 .keybord-operations .btn {
-  background-color: #7D807F; }
+  background-color: #3f4040; }
 
 .btn {
   box-shadow: 0px 3px 3px black; }
 
 .btn:focus {
   box-shadow: 0px 3px 3px black; }
+
+.btn-sci {
+  background-color: #82679e; }
 
 /* BTN 3D EFFECT */
 .btn:active {
